test/tests/stages/18_structures/invalid_parse/extra_credit/union_var_bad_tag.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[14]:
  int
  identifier(main)
  (
  void
  )
  {
  union
  const int(4)
  identifier(foo)
  ;
  return
  const int(0)
  ;
  }
